update build container def

--- a/Dockerbuild/Dockerfile
+++ b/Dockerbuild/Dockerfile
@@ -2,9 +2,7 @@ FROM ghcr.io/rocker-org/binder:latest
 
 LABEL org.opencontainers.image.source="https://github.com/e-kotov/spanishoddata-playground"
 
-RUN install2.r --error --skipinstalled --ncpus -4 flowmapper flowmapblue mapgl mapSpain hexSticker duckdb sf remotes httr2 parallelly memuse xml2 here curl quarto spanishoddata
-
-# RUN R -e "install.packages('spanishoddata', repos = c('https://packagemanager.posit.co/cran/__linux__/noble/latest'))"
+RUN install2.r --error --skipinstalled --ncpus -4 flowmapper flowmapblue mapgl mapSpain hexSticker duckdb sf remotes httr2 parallelly memuse xml2 here curl quarto spanishoddata scales furrr future future.mirai tidyverse
 
 RUN echo 'SPANISH_OD_DATA_DIR=~/spanish_od_data' >> ~/.Renviron
 
